--- a/index.html
+++ b/index.html
@@ -50,40 +50,15 @@
             border-bottom: 2px solid #e9ecef;
         }
 
-        .input-tabs {
-            display: flex;
-            gap: 10px;
-            margin-bottom: 20px;
+        .input-group {
+            margin-bottom: 25px;
         }
 
-        .tab-button {
-            padding: 12px 24px;
-            border: none;
-            background: white;
-            color: #667eea;
-            font-size: 16px;
+        .input-label {
+            font-size: 18px;
             font-weight: 600;
-            border-radius: 8px;
-            cursor: pointer;
-            transition: all 0.3s;
-        }
-
-        .tab-button:hover {
-            background: #667eea;
-            color: white;
-        }
-
-        .tab-button.active {
-            background: #667eea;
-            color: white;
-            box-shadow: 0 4px 12px rgba(102, 126, 234, 0.4);
-        }
-
-        .input-content {
-            display: none;
-        }
-
-        .input-content.active {
+            color: #667eea;
+            margin-bottom: 12px;
             display: block;
         }
 
@@ -242,6 +217,8 @@
             font-size: 13px;
             overflow-x: auto;
             line-height: 1.6;
+            white-space: pre;
+            margin: 0;
         }
 
         .json-key {
@@ -321,23 +298,20 @@
     </div>
 
     <div class="input-section">
-        <div class="input-tabs">
-            <button class="tab-button active" onclick="switchTab('file')">Upload File</button>
-            <button class="tab-button" onclick="switchTab('text')">Paste Text</button>
+        <div class="input-group">
+            <label class="input-label">Paste JSONL Text</label>
+            <textarea id="jsonlText" placeholder="Paste your JSONL content here..."></textarea>
+            <button class="parse-button" onclick="parseTextInput()">Parse JSONL</button>
         </div>
 
-        <div id="file-input" class="input-content active">
+        <div class="input-group">
+            <label class="input-label">Or Upload File</label>
             <div class="file-input-wrapper">
                 <label for="fileUpload" class="file-input-label">
                     <span>📁 Click to upload JSONL file</span>
                 </label>
                 <input type="file" id="fileUpload" accept=".jsonl,.txt" onchange="handleFileUpload(event)">
             </div>
-        </div>
-
-        <div id="text-input" class="input-content">
-            <textarea id="jsonlText" placeholder="Paste your JSONL content here..."></textarea>
-            <button class="parse-button" onclick="parseTextInput()">Parse JSONL</button>
         </div>
     </div>
 
@@ -374,22 +348,6 @@
 </div>
 
 <script>
-    let currentTab = 'file';
-
-    function switchTab(tab) {
-        currentTab = tab;
-
-        document.querySelectorAll('.tab-button').forEach(btn => {
-            btn.classList.remove('active');
-        });
-        document.querySelectorAll('.input-content').forEach(content => {
-            content.classList.remove('active');
-        });
-
-        event.target.classList.add('active');
-        document.getElementById(tab + '-input').classList.add('active');
-    }
-
     function handleFileUpload(event) {
         const file = event.target.files[0];
         if (!file) return;
@@ -489,7 +447,7 @@
                         <span class="event-number">Event #${index + 1}</span>
                         <span class="event-type">${type}</span>
                     </div>
-                    <div class="json-display">${syntaxHighlight(event)}</div>
+                    <pre class="json-display">${syntaxHighlight(event)}</pre>
                 `;
 
             resultsDiv.appendChild(card);
